<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.benjaminmacdonald.cooking_app.HelpActivity"
    android:background="@drawable/add_button">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/layoutHelpLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/FAQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnFAQ"
            android:layout_weight="0.06"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:onClick="getFAQ" />

        <Button
            android:text="@string/Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnHowSearch"
            android:layout_weight="0.06"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:onClick="getSearchHelp" />

        <Button
            android:text="@string/Favoriting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnHowFavorite"
            android:layout_weight="0.06"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:onClick="getFavorite" />

        <Button
            android:text="@string/AddYourOwnRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddOwnRecipe"
            android:layout_weight="0.06"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:onClick="getAddOwnRecipe" />

        <Button
            android:text="@string/ContactUs"
            android:layout_height="wrap_content"
            android:id="@+id/btnContact"
            android:layout_weight="0.06"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:textStyle="normal|bold"
            android:onClick="getContact" />
    </LinearLayout>
</RelativeLayout>
